[gd_scene load_steps=4 format=3 uid="uid://bxaksfaf0qi78"]

[ext_resource type="Script" path="res://scenes/screens/tic_tac_toe.gd" id="1_b6gdg"]
[ext_resource type="Texture2D" uid="uid://cghpcwtbhktmf" path="res://images/tic-tac-toe-blackboard.jpg" id="1_uhjmd"]
[ext_resource type="PackedScene" uid="uid://bqnfjkr7yril2" path="res://scenes/actors/board_mark.tscn" id="2_gmpax"]

[node name="TicTacToe" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_b6gdg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_uhjmd")
expand_mode = 1

[node name="GridContainer" type="GridContainer" parent="TextureRect"]
layout_mode = 2
offset_left = 225.0
offset_top = 47.0
offset_right = 911.0
offset_bottom = 564.0
mouse_filter = 2
columns = 3

[node name="BoardMark" parent="TextureRect/GridContainer" instance=ExtResource("2_gmpax")]
layout_mode = 2

[node name="BoardMark2" parent="TextureRect/GridContainer" instance=ExtResource("2_gmpax")]
layout_mode = 2

[node name="BoardMark3" parent="TextureRect/GridContainer" instance=ExtResource("2_gmpax")]
layout_mode = 2

[node name="BoardMark4" parent="TextureRect/GridContainer" instance=ExtResource("2_gmpax")]
layout_mode = 2

[node name="BoardMark5" parent="TextureRect/GridContainer" instance=ExtResource("2_gmpax")]
layout_mode = 2

[node name="BoardMark6" parent="TextureRect/GridContainer" instance=ExtResource("2_gmpax")]
layout_mode = 2

[node name="BoardMark7" parent="TextureRect/GridContainer" instance=ExtResource("2_gmpax")]
layout_mode = 2

[node name="BoardMark8" parent="TextureRect/GridContainer" instance=ExtResource("2_gmpax")]
layout_mode = 2

[node name="BoardMark9" parent="TextureRect/GridContainer" instance=ExtResource("2_gmpax")]
layout_mode = 2

[node name="UI" type="Node2D" parent="."]

[node name="BackButton" type="Button" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = 16.0
offset_right = 175.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
text = "Back to Main Menu"

[node name="ResetButton" type="Button" parent="UI"]
visible = false
offset_left = 429.0
offset_top = 372.0
offset_right = 714.0
offset_bottom = 426.0
text = "Reset Board"

[connection signal="pressed" from="UI/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="UI/ResetButton" to="." method="_on_reset_button_pressed"]
